      cause conary to try to reinstall the original foo (resulting in path
      conflicts). (CNY-915)

  o Build (cvc) Changes:
    * The Requires() policy now reads pkg-config files and converts the
      "Requires:" lines in them into trove dependencies, removing the
      need to specify those dependencies manually. (CNY-896)

  o Bug Fixes:
    * Conary now runs tagscripts correctly when passed a relative root 
      parameter (CNY-416).
    * cvc log now works when there are multiple branches matching for the
      same trove on the same label.
    * Fixed resolveLevel 2 so that it does not try to update packages that
      are already a part of the update. (CNY-886, CNY-780)
    * Fixed resolveLevel 2 so that it does not repeatedly try to perform 
      the same update. (CNY-887)
    * cvc cook | less now leaves less in control of the terminal. (CNY-802)
    * The download thread terminating during an update is now a fatal
      error.
    * The web interface to a conary repository will now print an error
      message instead of a traceback when adding an entitlement class
      with access to a group that does not exist.
    * cvc cook group now limits the number of path conflicts displayed for 
      one trove to 10. (CNY-910)

Changes in 1.0.31:
  o Client Changes:
    * Conary now restarts itself after updating critical conary
      components (currently, that consists of conary).  Hooks have
      been added for other components using the conary api to specify
      other troves as critical.  Also, hooks have been added for other
      components to specify a trove to update last. (CNY-805, CNY-808)
    * Conary now warns the user when they will be causing label
      conflicts - that is when an operation would cause two different
      branches of development for a single trove to end up with the
      same trailing label.  Since most conary operations are label
      based, such label conflicts can be confusing to work with and